this is a better button

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                 </form>
     
                 <div class="text-center text-md-left">
-                    <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                    <a class="btn btn-dark whitetext" onclick="document.getElementById('contact-form').submit();"><h6 class="whitetext">Send</h6></a>
                 </div>
                 <div class="status"></div>
             </div>
