--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <li class="nav-item">
               <a class="nav-link whitetext" href="./contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link whitetext" href="./resume.html">Resume</a>
+            </li>
           </ul>
         </div>
           </nav>
