--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 
               <div class="row-sm">  
                 <div class="col-sm-3"><a href="https://kaibili01.github.io/liri-node-app/" target="_blank" rel="noreferrer noopener">
-                                      <img src="./assets/images/spotify-this-song_without_song .png" alt="liri node bot" class="img-thumbnail"></a><h6 class="portext">Liri Bot: Node Console </h6></div>
+                                      <img src="./assets/images/spotify-this-song_without_song .png" alt="liri node bot" class="img-thumbnail"></a><h6 class="portext">Liri Bot </h6></div>
 
                 <div class="col-sm-3"><a href="https://kaibili01.github.io/quemador/gui/index.html" target="_blank" rel="noreferrer noopener">
                                         <img src="./assets/images/Quemadorlogo.png" alt="quemador gui" class="img-thumbnail"></a><h6 class="portext">Responsive Web</h6></div>
