--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,10 @@
                 <div class="border border-dark border-right-0" style="width: 400px;" >
 
                  
-
+             
+                  <div class="row-sm">  
+                <div class="col-sm-4"><a href="https://github.com/kaibili01/bamazon/blob/master/README.md" target="_blank" rel="noreferrer noopener">
+                                      <img src="./assets/images/database.png" alt="liri node bot" class="img-thumbnail"></a><h6 class="portext">Bamazon</h6></div>
 
               <div class="row-sm">  
                 <div class="col-sm-4"><a href="https://kaibili01.github.io/liri-node-app/" target="_blank" rel="noreferrer noopener">
