--- a/resume.html
+++ b/resume.html
@@ -63,21 +63,21 @@
                     <!-- <img src="assets/images/profile-a.jpg" alt="Adan Garcia-Bugarin" class="rounded-circle"></div></span>  -->
                     <br>
 
-                    <div class="row-sm" style="width: 675px;">
-                        <div class="col-sm-3" style="width: 675px;"></div>
-                        <div class="col-sm-3 text-muted" style="width: 675px;">
+                    <div class="row-sm" style="width: 400px;">
+                        <div class="col-sm-3" style="width: 400px;"></div>
+                        <div class="col-sm-3 text-muted" style="width: 400px;">
                             <h2>Resume</h2>
                         </div>
-                        <div class="col-sm-3" style="width: 675px;"></div>
+                        <div class="col-sm-3" style="width: 400px;"></div>
 
 
                     </div>
 
                     <span>
-                        <div class="border border-dark border-left-0 border-right-0" style="width: 675px;">
+                        <div class="border border-dark border-left-0 border-right-0" style="width: 400px;">
 
 
-                            <p> <b>SKILL SET:</b>
+                            <p class="resume"> <b>SKILL SET:</b>
 
                                 Front end design via HTML, JavaScript, and CSS. Robust incorporation and use of
                                 bootstrap, materialize.css, google fonts, and API’s. Mobile-first design approach via
