new portfolio files

--- a/resume.html
+++ b/resume.html
@@ -51,30 +51,30 @@
         </div>
     </nav>
 
-    <div class="container text-justified" style="width: 675px;">
+    <div class="rescontainer text-justified" style="width: 375px">
 
 
 
 
-        <div class="row-sm-" style="width: 675px;">
+        <div class="row-sm-" style="width: 375px;">
 
             <span class="border-5">
-                <div class="float-right">
+                <div class="float-center">
                     <!-- <img src="assets/images/profile-a.jpg" alt="Adan Garcia-Bugarin" class="rounded-circle"></div></span>  -->
                     <br>
 
-                    <div class="row-sm" style="width: 400px;">
-                        <div class="col-sm-3" style="width: 400px;"></div>
-                        <div class="col-sm-3 text-muted" style="width: 400px;">
+                    <div class="row-sm" style="width: 375px;">
+                        <div class="col-sm-3" style="width: 375px;"></div>
+                        <div class="col-sm-3 text-muted" style="width: 375px;">
                             <h2>Resume</h2>
                         </div>
-                        <div class="col-sm-3" style="width: 400px;"></div>
+                        <div class="col-sm-3" style="width: 375px;"></div>
 
 
                     </div>
 
-                    <span>
-                        <div class="border border-dark border-left-0 border-right-0" style="width: 400px;">
+                    <span></span>
+                        <div class="border border-dark border-left-0 border-right-0" style="width: 375px;">
 
 
                             <p class="resume"> <b>SKILL SET:</b>
