new resume file

--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
 
                                 Front end design via HTML, JavaScript, and CSS. Robust incorporation and use of
                                 bootstrap, materialize.css, google fonts, and API’s. Mobile-first design approach via
-                                appropriate use of media queries.
+                                appropriate use of media queries. Heroku and node.js
                                 <br>
                                 <br>
                                 Methodical processes entailing qualitative and quantitative probes for research design
