--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
             </ul>
         </div>
     </nav>
-    <div class="resume">
+    <div class="width">
     <div class="rescontainer text-justified">
 
 
