--- a/resume.html
+++ b/resume.html
@@ -146,16 +146,17 @@
                                 <br>
                                 <br>
                                 <b>INDEPENDENT PROJECTS</b>
+                                <br>
 
-                                Alameda Health Partners March 2017: Doctor’s Day visual for 2017. Photographic
+                                <b>Alameda Health Partners March 2017:</b> Doctor’s Day visual for 2017. Photographic
                                 retouching and biography development. Form creation utilizing branding standards for
                                 the Alameda Health System identity. Web mockup development for the potential website.
-
-                                El Camino World Travel February 2016: Brand and logotype creation. Website development
+                                <br>
+                                <b>El Camino World Travel February 2016:</b> Brand and logotype creation. Website development
                                 and online form implementation. Typographic treatment for ease of content readability
                                 in both digital and print. Bilingual Spanish and English accessibility.
-
-                                Maidu Museum and Historic Site September 2015: Participating visual artist. Presented a
+                                <br>
+                                <b>Maidu Museum and Historic Site September 2015:</b> Participating visual artist. Presented a
                                 canvas piece featuring Native American motifs for their annual event “Coyote Stories”.
                                 The piece included both traditional painting techniques and digital interventions.
                                 Developed photography and web gallery for this project.
@@ -172,17 +173,18 @@
                                 purpose of targeted advertisement and marketing. I offered both design and branding
                                 assistance to small businesses while also promoting advertising space in the Spanish
                                 Yellow Pages.
-
+                                <br>
                                 2011-2011 Design and Events Assistant: Center for Art and Public Life: CCAC Oakland, Ca
 
                                 Provided support regarding efficient design practices for gallery exhibits. Assisted
                                 senior designer with content management and optimization for print materials.
                                 Leave-behinds, booklets, CD cases, Maps.
-
+                                <br>
                                 2002-2002 Associate World Cup Store San Francisco, Ca
-
+                                
                                 PR and outreach for product sales. Maintained database of accounts and inventory.
                                 Market research for product competitors and trends.
+                                <br>
                                 <br>
                                 <b>EDUCATION</b>
 
