--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
               <br>
               
               <div class="row-sm">
-                  <div class="col-sm-3"></div>
+                  <div class="col-sm-3">
                   <div class="col-sm-3 text-muted">
                       <div class="aboutlabel"><h2>About</h2></div>
                   </div>
       </div>
       <div class="col-sm">
           <div class="border border-dark border-top-0 border-left-0 border-right-0">
+          <!-- <div class="border border-dark border-left-0 border-right-0"> -->
+          
         Hello everyone! Welcome to my website: My background is in design and visual communications but what I love the most is working on projects that require design strategy and focuss. 
         It’s my hope to incorporate my new skills as a web-developer to my bag of tricks. I have a few interest and hobbies that keep me entertained: I love playing chess. I also like to go
         running in the trails with my baby's moma and to hang out with my friends at the pub.
