new resume file

--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,8 @@
                                 </ul>
                                 <br>
                                 <b>EXPERIENCE</b>
-
+                                <br>
+                                <br>
                                 2012-Current Freelance Graphic Designer Oakland, Ca
 
                                 Adanimaldesign.org
@@ -147,6 +148,7 @@
                                 <br>
                                 <b>INDEPENDENT PROJECTS</b>
                                 <br>
+                                <br>
 
                                 <b>Alameda Health Partners March 2017:</b> Doctor’s Day visual for 2017. Photographic
                                 retouching and biography development. Form creation utilizing branding standards for
@@ -166,39 +168,45 @@
                                 <br>
                                 <br>
 
-                                2015-2016: Senior Advertising Executive: Sales Momento Spanish Yellow Pages San Jose,
-                                Ca
-
+                                <b>2015-2016: Senior Advertising Executive: Sales Momento Spanish Yellow Pages San Jose,
+                                Ca</b>
+                                <br>
                                 Emphasis on reaching Spanish speaking businesses in the Bay Area and beyond for the
                                 purpose of targeted advertisement and marketing. I offered both design and branding
                                 assistance to small businesses while also promoting advertising space in the Spanish
                                 Yellow Pages.
                                 <br>
-                                2011-2011 Design and Events Assistant: Center for Art and Public Life: CCAC Oakland, Ca
-
+                                <br>
+                                
+                                <b>2011-2011 Design and Events Assistant: Center for Art and Public Life: CCAC Oakland, Ca</b>
+                                <br>
                                 Provided support regarding efficient design practices for gallery exhibits. Assisted
                                 senior designer with content management and optimization for print materials.
                                 Leave-behinds, booklets, CD cases, Maps.
                                 <br>
-                                2002-2002 Associate World Cup Store San Francisco, Ca
+                                <br>
                                 
+                                <b>2002-2002 Associate World Cup Store San Francisco, Ca</b>
+                                <br>
                                 PR and outreach for product sales. Maintained database of accounts and inventory.
                                 Market research for product competitors and trends.
                                 <br>
                                 <br>
                                 <b>EDUCATION</b>
+                                <br>
+                                <br>
 
                                 2019: UC Berkeley Extention: Full Stack Full Flex Developer Certification
-
+                                <br>
                                 2012: California College of the Arts (CCA) MFA Design
-
+                                <br>
                                 2008: SFSU Industrial Design and Spanish. Baccalaureate in Art (BA)
-
+                                <br>
                                 2003: City College of San Francisco Associates in Liberal Arts (AA)
-
+                                <br>
                                 2004-2005: UC Overseas Literature Curriculum in Spain for One year.
-
-                                Grant recipient from AIGC: The American Indian Graduate Center.
+                                <br>
+                                <i>Grant recipient from AIGC: The American Indian Graduate Center.</i>
                          </p>
                         </div>
 
