--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,10 @@
               <span>
                 <div class="border border-dark border-right-0" style="width: 400px;" >
 
-                 
+                  <div class="row-sm">  
+                    <div class="col-sm-4"><a href="https://whispering-headland-69918.herokuapp.com/burgers" target="_blank" rel="noreferrer noopener">
+                                          <img src="./assets/images/eatdaburger.png" alt="friend-finder" class="img-thumbnail"></a><h6 class="portext">Eat Da Burger!</h6></div>
+                  
                   <div class="row-sm">  
                     <div class="col-sm-4"><a href="https://calm-depths-81376.herokuapp.com/" target="_blank" rel="noreferrer noopener">
                                           <img src="./assets/images/friend_finder.png" alt="friend-finder" class="img-thumbnail"></a><h6 class="portext">Friend-Finder</h6></div>
