new contact card info

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                     </li>
     
                     <li><i class="fa fa-envelope mt-4 fa-2x"></i>
-                        <h6><small class="text-muted"><a href="mailto:adananimaldesign2gmail.com">adananimaldesign@gmail.com</a></small></h6>
+                        <h6><small class="text-muted"><a href="mailto:adananimaldesign2gmail.com">email</a></small></h6>
                     </li>
                     
                 </ul>
