new resume file

--- a/resume.html
+++ b/resume.html
@@ -95,11 +95,12 @@
                                 interest groups. Natural leadership ability.
                                 <br>
                                 <br>
-                                <b>SPECIALTY SKILL SET:</b> Design-centered approach and understanding of the Hispanic
-                                community as an interest group both domestically and abroad. In-depth understanding of
-                                design elements that influence attention, scope, retention, preference, and tone. Asset
-                                assembly for the purpose of marketing best practices and deployment. Deep understanding
-                                of the Spanish language both as a native speaker and through the lens of academia.
+                                <b>SPECIALTY SKILL SET:</b> Design-centered approach for the purpose of clarifying visual impacts. 
+                                In-depth understanding of design elements that influence attention, scope, retention, preference, and tone. 
+                                Asset assembly for the purpose of marketing best practices and deployment. Design research strategy tool creation 
+                                and interaction model creation. Interdisciplinary approach to design challenges through different mediums ranging 
+                                from industrial material applications to digital interface best practices.
+
                                 <br>
                                 <br>
                                 <b>TECHNICAL SKILL SET:</b>
