new carousel files

--- a/carousel1.html
+++ b/carousel1.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/portfoliostyle.css">
 
-    <title>Hello, world!</title>
+    <title>Spot Carousel!</title>
 </head>
 
 <body class="carbody">
@@ -19,13 +19,59 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/spotspecs2.jpg" class="d-block w-100" alt="...">
+                    
+                    <img src="./assets/images/spot/spotfeaturedimage.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slide6.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/images/spot/SPOT_PRES-1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slide7.png" class="d-block w-100" alt="...">
+                    <img src="./assets/images/spot/SPOT_PRES-3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-4.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-5.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-6.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-7.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-8.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-9.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-10.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-11.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-12.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-13.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-14.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-15.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-17.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/spot/SPOT_PRES-18.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
