new sonia sanchez carousel

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,10 @@
               <div class="row-sm">
                   <div class="col-sm-4"><a href="carousel1.html" target="_blank" rel="noreferrer noopener"> 
                                       <img src="./assets/images/spotspecs2.png" alt="spot prototype" class="img-thumbnail"></a><h6 class="portext">Product Design</h6></div>
-                  <div class="col-sm-4"><img src="./assets/images/soniaposter.png" alt="sonia sanchez" class="img-thumbnail"><h6 class="portext">Print and Layout</h6></div>
+                  
+                  
+                  <div class="col-sm-4"><a href="carousel2.html" target="_blank" rel="noreferrer noopener"> 
+                                      <img src="./assets/images/soniaposter.png" alt="sonia sanchez" class="img-thumbnail"></a><h6 class="portext">Print and Layout</h6></div>
                 </div>
 
               <div class="row-sm">
