changes to the navigation look and feel

--- a/resume.html
+++ b/resume.html
@@ -23,8 +23,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:dimgrey">
-
+    <nav class= "nav navbar-expand-sm navbar-light" style="background-color:dimgrey">
         <h1>
             <medium class="text-justified whitetext">Adan</medium>
         </h1>
@@ -36,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="ml-auto nav">
                 <li class="nav-item">
-                    <a class="nav-link active whitetext" href="./index.html" style="background-color:#666666">About Me</a>
+                    <a class="nav-link active whitetext" href="./index.html" style="background-color:#666666">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link whitetext" href="./portfolio.html">Portfolio</a>
@@ -65,11 +64,11 @@
                     <br>
                     
                     <div class="row-sm">
-                        <div class="col-sm-3"></div>
-                        <div class="col-sm-3 text-muted">
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-2 text-muted">
                             <h2>Resume</h2>
                         </div>
-                        <div class="col-sm-3"></div>
+                        <div class="col-sm-2"></div>
 
 
                     </div>
@@ -80,9 +79,10 @@
                             
                             <p> <b>SKILL SET:</b>
 
-                                Front end design via HTML, JavaScript, and CSS. Robust incorporation and use of
-                                bootstrap, materialize.css, google fonts, and API’s. Mobile-first design approach via
-                                appropriate use of media queries. Heroku and node.js
+                                Front end design via HTML, JavaScript, and CSS. Robust application use of bootstrap, materialize.css, and google fonts. 
+                                Mobile-first design approach via appropriate use of media queries. Heroku and node.js. Backend architecture via MySQL, 
+                                Sequelize, MongoDB/Mongoose object modeling, React, and the powerful incorporation of API’S.
+
                                 <br>
                                 <br>
                                 Methodical processes entailing qualitative and quantitative probes for research design
