--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
 
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:dimgrey">
-
+  <nav class= "nav navbar-expand-sm navbar-light" style="background-color:dimgrey">
     <h1>
       <medium class="text-justified whitetext">Adan</medium>
     </h1>
