--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         
 
         
-        <nav class= "nav navbar-expand-sm navbar-light" style="background-color:dimgrey">          
+        <nav class= "nav navbar-expand-sm navbar-light" style="background-color:white">          
           <h1><medium class="text-justified whitetext">Adan</medium></h1>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="ml-auto nav">
             <li class="nav-item">
-              <a class="nav-link active whitetext" href="./index.html" style="background-color:#666666">About</a>
+              <a class="nav-link active whitetext" href="./index.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link whitetext" href="./portfolio.html">Portfolio</a>
