--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
         <style type="text/css">
           #outlook a { padding:0; }
@@ -138,7 +140,7 @@
 
       <!--Grid column-->
       <div class="col-md-9 mb-md-0 mb-5 portext">
-          <form id="contact-form" name="contact-form" action="" method="POST">
+          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
               <!--Grid row-->
               <div class="row">
@@ -212,8 +214,8 @@
                   <h6><small class="text-muted">+ 01 510 710 0774</small></h6>
               </li>
 
-              <li><i class="fa fa-envelope mt-4 fa-2x"></i>
-                  <h6><small class="text-muted"><a href="mailto:adananimaldesign@gmail.com">email</a></small></h6>
+              <li><a href="mailto:adananimaldesign@gmail.com"><i class="fa fa-envelope mt-4 fa-2x"></i></a>
+                  <h6><small class="text-muted">email</small></h6>
               </li>
               
           </ul>
@@ -236,7 +238,7 @@
         <!-- border: black solid 2px;  -->
        </span> 
       </div>
-      <h6><small class="text-muted">this cards functionality is in development: if you want to email me just hit the link .</small></h6>
+      <h6><small class="text-muted">this cards functionality is in development: if you want to email me just hit the icon .</small></h6>
 
    
 </div>
